--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
+~$ git clone https://github.com/stepgroup/stepgrowup.github.io
+~$ cd stepgrowup.github.io
 
+~$ echo "Hello World" > index.html
+~$ git add --all
+
+~$ git commit -m "Initial commit"
+
+!$ git push -u origin main
 <!DOCTYPE html>
 <html lang="en">
 <head>
