--- a/index.html
+++ b/index.html
@@ -246,6 +246,10 @@
         .social-icons{
             display: flex;
             justify-content: center;
+             transition: transform 0.3s ease-in-out;
+        }
+  .social-icons:hover .social-icons a{
+             transform: scale(1.1);
         }
 
         .social-icons a{
