--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@
         .social-icons{
             display: flex;
             justify-content: center;
-             transition: transform 0.3s ease-in-out;
+            
         }
-  .social-icons:hover .social-icons a{
+ .social-icons a:hover i{
              transform: scale(1.1);
         }
 
@@ -266,6 +266,7 @@
             color: transparent;
             animation: animateSocialIcons 2s ease-in-out infinite;
             display: inline-block;
+             transition: transform 0.3s ease-in-out;
         }
         @keyframes animateSocialIcons {
             0% {
