--- a/index.html
+++ b/index.html
@@ -250,6 +250,9 @@
         }
  .social-icons a:hover i{
              transform: scale(1.1);
+         background-image: linear-gradient(to right, #6a11cb, #2575fc);
+    -webkit-background-clip: text;
+     opacity:0.8;
         }
 
         .social-icons a{
@@ -258,7 +261,6 @@
             border:  1px solid #6a11cb;
             border-radius: 8px;
             font-size: 22px;
-
             text-decoration: none;
             margin: 0 8px;
             background-image: linear-gradient(to right, #6a11cb, #2575fc);
