--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
              transform: scale(1.1);
          background-image: linear-gradient(to right, #6a11cb, #2575fc);
     -webkit-background-clip: text;
+     color:transparent;
      opacity:0.8;
         }
 
