--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             align-items: center;
             min-height: 100vh;
             background-color: #ffffff; /* Changed background color to white */
-            background-image: linear-gradient(120deg, #660860, #f5eada);
+            background-image: linear-gradient(120deg, #2d298e, #f5eada);
             animation: animateBackground 8s ease-in-out infinite; /* Infinite animation */
         }
         @keyframes animateBackground {
