--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background-color: #ffffff; /* Changed background color to white */
-            background-image: linear-gradient(120deg, #2d298e, #f5eada);
+            background-image: linear-gradient(116deg, #d9cff3, #d2c7f0);
             animation: animateBackground 8s ease-in-out infinite; /* Infinite animation */
         }
         @keyframes animateBackground {
